--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "author": "Jeremy 'Jermbo' Lawson",
   "license": "MIT",
   "scripts": {
-    "dev": "./node_modules/.bin/gulp __start-local__"
+    "dev": "./node_modules/.bin/gulp __start-local__",
+    "zip": "./node_modules/.bin/gulp zip"
   },
   "devDependencies": {
     "@babel/core": "^7.1.5",
@@ -17,7 +18,7 @@
     "browser-sync": "^2.26.3",
     "del": "^3.0.0",
     "eslint": "^5.9.0",
-    "fs": "0.0.1-security",
+    "file-system": "^2.2.2",
     "gulp": "^4.0.0",
     "gulp-autoprefixer": "^6.0.0",
     "gulp-babel": "^8.0.0",
@@ -27,6 +28,7 @@
     "gulp-plumber": "^1.2.0",
     "gulp-sass": "^4.0.2",
     "gulp-sourcemaps": "^2.6.4",
+    "gulp-zip": "^4.2.0",
     "yargs": "^12.0.2"
   }
 }
