--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
   "author": "Jeremy 'Jermbo' Lawson",
   "license": "MIT",
   "scripts": {
-    "dev": "./node_modules/.bin/gulp __start-local__",
-    "zip": "./node_modules/.bin/gulp zip"
+    "dev": "./node_modules/.bin/gulp start-local",
+    "build": "./node_modules/.bin/gulp build-projects",
+    "zip": "./node_modules/.bin/gulp zip",
+    "clean": "./node_modules/.bin/gulp clean"
   },
   "devDependencies": {
     "@babel/core": "^7.1.5",
