--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "del": "^5.1.0",
     "dotenv": "^8.1.0",
     "eslint": "^6.5.1",
+    "file-system": "^2.2.2",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^7.0.0",
     "gulp-babel": "^8.0.0",
