--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "generic_starter",
-  "version": "1.0.0",
-  "description": "A generic starting structure for simple sites. This is also meant to be a good starting point for more complex sites that have different file structures. Feel free to augment and adopt to your situation.",
+  "name": "cosmic_checker",
+  "version": "2.0.0",
+  "description": "A library that guides students through building websites.",
   "main": "index.js",
   "author": "Jeremy 'Jermbo' Lawson",
   "license": "MIT",
@@ -11,32 +11,31 @@
     "clean": "gulp clean"
   },
   "devDependencies": {
-    "@babel/core": "^7.6.2",
-    "@babel/plugin-proposal-object-rest-spread": "^7.6.2",
-    "@babel/plugin-proposal-optional-chaining": "^7.6.0",
-    "@babel/preset-env": "^7.6.2",
-    "@babel/register": "^7.6.2",
-    "@zellwk/resize-images": "^1.1.1",
+    "@babel/core": "^7.7.7",
+    "@babel/plugin-proposal-object-rest-spread": "^7.7.7",
+    "@babel/plugin-proposal-optional-chaining": "^7.7.5",
+    "@babel/preset-env": "^7.7.7",
+    "@babel/register": "^7.7.7",
     "babelify": "^10.0.0",
     "browser-sync": "^2.26.7",
     "browserify": "^16.5.0",
     "browserify-shim": "^3.8.14",
     "del": "^5.1.0",
-    "dotenv": "^8.1.0",
-    "eslint": "^6.5.1",
+    "dotenv": "^8.2.0",
+    "eslint": "^6.8.0",
     "gulp": "^4.0.2",
-    "gulp-autoprefixer": "^7.0.0",
+    "gulp-autoprefixer": "^7.0.1",
     "gulp-babel": "^8.0.0",
-    "gulp-changed": "^4.0.1",
+    "gulp-changed": "^4.0.2",
     "gulp-cssnano": "^2.1.3",
     "gulp-if": "^3.0.0",
-    "gulp-imagemin": "^6.1.0",
+    "gulp-imagemin": "^6.2.0",
     "gulp-load-plugins": "^2.0.1",
     "gulp-newer": "^1.4.0",
     "gulp-notify": "^3.2.0",
     "gulp-options": "^1.1.1",
     "gulp-plumber": "^1.2.1",
-    "gulp-rename": "^1.4.0",
+    "gulp-rename": "^2.0.0",
     "gulp-sass": "^4.0.2",
     "gulp-size": "^3.0.0",
     "gulp-sourcemaps": "^2.6.5",
@@ -48,6 +47,6 @@
     "gulp-zip": "^5.0.1",
     "vinyl-buffer": "^1.0.1",
     "vinyl-source-stream": "^2.0.0",
-    "yargs": "^14.0.0"
+    "yargs": "^15.1.0"
   }
 }
